# gapic-generator-ruby

./: .gitignore  .gitmodules  .release-please-manifest.json  .rubocop.yml  BUILD.bazel  Dockerfile  Gemfile  README.md  Rakefile  WORKSPACE  WORKSPACE.bazel  cloudbuild-test.yaml  docker-entrypoint.sh  example.proto  example.yml  gapic-common-0.19.1.gem  gapic-generator.gemspec  gapic.sh  release-please-config.json  renovate.json  ruby_gapic.bzl  ruby_gapic_pkg.bzl  transcoding_concerns.md
.circleci/: config.yml
.github/: renovate.json  snippet-bot.yml  sync-repo-settings.yaml
.github/workflows/: ci-common.yml  ci.yml  release-generators.yml  release-please.yml  tag-generators.yml
.kokoro/: bazel-test.sh  release-generators.cfg  release-generators.sh  release.cfg
.toys/: .toys.rb  release.rb
.toys/release/: .toys.rb  generators.rb  tag-generators.rb
.toys/run/: .toys.rb  Gemfile
bazel_example/: BUILD.bazel  README.md  WORKSPACE.bazel  example.proto  example.yml  ruby_gapic.bzl  ruby_gapic_pkg.bzl
bazel_example/diregapic/: BUILD.bazel
bazel_example/gapic-generator/: BUILD.bazel  example.proto  example.yml
bazel_example/gapic-generator-cloud/: BUILD.bazel
bazel_example/google-cloud-compute-v1-ruby/: .yardopts  google-cloud-compute-v1.gemspec
bazel_example/google-cloud-compute-v1-ruby/lib/google/cloud/compute/v1/: compute_pb.rb
common/: Gemfile  README.md  Rakefile
examples/google-cloud-pubsub/: .rubocop.yml  .yardopts  README.md  Rakefile  google-cloud-pubsub.gemspec
gapic/: .rubocop.yml  .toys.rb  .yardopts  CHANGELOG.md  Gemfile  README.md  RELEASING.md  Rakefile  gapic.gemspec
gapic-common/: .gitignore  .rubocop.yml  .toys.rb  .travis.yml  CHANGELOG.md  Gemfile  README.md  Rakefile  gapic-common-0.19.1.gem  gapic-common.gemspec
gapic-common/lib/: gapic.rb
gapic-common/test/: test_helper.rb
gapic-generator/: .gitignore  .rubocop.yml  .toys.rb  .yardopts  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Gemfile  README.md  Rakefile  default-rubocop.yml  docker-entrypoint.sh  expected_output  gapic-generator.gemspec  proto_input
gapic-generator-ads/: .rubocop.yml  .toys.rb  BUILD.bazel  CHANGELOG.md  Dockerfile  Gemfile  README.md  Rakefile  config.yml  docker-entrypoint.sh  expected_output  gapic-generator-ads.gemspec
gapic-generator-ads/test/: test_helper.rb
gapic-generator-cloud/: .gcloudignore  .gitignore  .rubocop.yml  .toys.rb  CHANGELOG.md  Dockerfile  Gemfile  README.md  Rakefile  cloud-rubocop.yml  cloudbuild.yaml  docker-entrypoint.sh  expected_output  gapic-generator-cloud.gemspec  proto_input  protofiles_input
gapic-generator-cloud/test/: test_helper.rb
gapic-generator-google_cloud/: Gemfile  Rakefile  gapic-generator-google_cloud.gemspec
gapic-generator/.toys/: .toys.rb  generate-protos.rb
gapic-generator/gem_templates/: binary.erb  dockerfile.erb  dockerfile.text.erb  entrypoint.erb  entrypoint.text.erb  gapic_sh.erb  gapic_sh.text.erb  gemfile.erb  gemfile.text.erb  gemspec.erb  gemspec.text.erb  generator.erb  generator.text.erb  gitignore.text.erb  rakefile.erb  readme.text.erb  rubocop.erb  rubocop.text.erb  test_generator.erb  test_generator.text.erb  test_helper.erb  test_helper.text.erb  version.erb
gapic-generator/test/: test_helper.rb
gapic-showcase-test/: .gitignore  .rubocop.yml  Gemfile  README.md  Rakefile  gapic-showcase-test.gemspec
gapic/lib/: gapic.rb
gapic/test/: test_helper.rb  version_test.rb
rules_ruby_gapic/: .gitignore  BUILD.bazel  CHANGELOG.md  README.md  gapic_src_repo.bzl  repositories.bzl  ruby_bundler.bzl  ruby_gapic.bzl  ruby_gapic_legacy.bzl  ruby_gapic_pkg.bzl
rules_ruby_gapic/docker_testing/: Dockerfile  README.md  docker-entrypoint.sh  rundocker.sh
rules_ruby_gapic/gapic-generator/: BUILD.bazel  repositories.bzl
rules_ruby_gapic/gapic-generator-ads/: BUILD.bazel  repositories.bzl
rules_ruby_gapic/gapic-generator-cloud/: BUILD.bazel  repositories.bzl
rules_ruby_gapic/prebuilt/: README.md  pack_prebuilt_ruby.sh  prebuild.sh  update_prebuilt_ruby.sh
rules_ruby_gapic/private/: providers.bzl  ruby_gapic_library.bzl  ruby_gapic_library_internal.bzl
rules_ruby_gapic/ruby/: BUILD.bazel  README.md  bundle_install.bzl  bundled_install_context.bzl  ruby_bundler.bzl  ruby_context.bzl  ruby_runtime.bzl  ruby_toolchain.bzl
rules_ruby_gapic/ruby/check/: BUILD.bazel  check_ruby_nativelibs.bzl  check_ruby_versions.bzl
rules_ruby_gapic/ruby/internal/: build_bazel_template.bzl  copy_ruby_runtime_template.bzl  utils.bzl
rules_ruby_gapic/ruby/private/: utils.bzl
rules_ruby_gapic/ruby/templates/: BUILD.bundle.bazel.tpl  BUILD.dist.bazel.tpl  build_bazel_template.bzl  bundle_install.sh.tpl  bundle_install_simplified.sh.tpl  gem_install_bundler.sh.tpl
rules_ruby_gapic/ruby/test/: check_ruby_nativelibs.bzl  check_ruby_versions.bzl
rules_ruby_gapic/ruby_binary/: BUILD.bazel  README.md  ruby_binary.bzl  ruby_bundler_binary.bzl
rules_ruby_gapic/ruby_binary/check/: BUILD.bazel  hello_ruby_lib.rb
rules_ruby_gapic/ruby_binary/check/rainbow_bundler_test/: Gemfile
rules_ruby_gapic/ruby_binary/check/rainbow_bundler_test/lib/: version.rb
rules_ruby_gapic/ruby_binary/check/rainbow_gemtest/: Gemfile
rules_ruby_gapic/ruby_binary/check/rainbow_gemtest/lib/: rainbow_main.rb
rules_ruby_gapic/ruby_binary/check/srcs/: hello_ruby.rb
rules_ruby_gapic/ruby_binary/check/srcs/lib/: hello_ruby_lib.rb
rules_ruby_gapic/ruby_binary/check/syscall_rubocop_bundler_test/lib/: rubocop_main.rb  version.rb
rules_ruby_gapic/ruby_binary/check/syscall_rubocop_test/: Gemfile
rules_ruby_gapic/ruby_binary/check/syscall_rubocop_test/lib/: rubocop_main.rb  version.rb
rules_ruby_gapic/ruby_binary/test/: BUILD.bazel
rules_ruby_gapic/ruby_binary/test/rainbow_bundler_test/lib/: rainbow_main.rb
rules_ruby_gapic/ruby_binary/test/syscall_rubocop_bundler_test/: Gemfile
shared/: .gitignore  .rubocop.yml  .toys.rb  Gemfile  README.md  Rakefile  gem_defaults.rb
shared/config/: firestore.yml  (+24 more)
templates/: README.md  _client.erb  _modules.erb  client.erb  clients.erb  gapic_dump.erb
test/: test_helper.rb
(+2794 files in other folders)
