load("//:ruby_gapic.bzl", "ruby_gapic_library")

proto_library(
    name = "example_src",
    srcs = [
        "example.proto",
    ],
)

ruby_gapic_library(
  name = "example_gapic_library",
  #confyml = "//:example.yml",
  srcs = ["example_src",],
  #  "ruby-cloud-gem-name": "example",
  #  --ruby_gapic_opt="ruby-cloud-gem-name=example"
)