load("//:ruby_gapic.bzl", "ruby_gapic_library", "ruby_proto_library", "ruby_grpc_library")
load("//:ruby_gapic_pkg.bzl", "ruby_gapic_assembly_pkg")

# completed client library
ruby_gapic_assembly_pkg(
  name = "example_gapic_pkg",
  deps = [
    ":example_gapic_library",
    ":example_proto_library",
    ":example_grpc_library",
  ],
)

# the proto file wrapper
proto_library(
  name = "example_src",
  srcs = [
    "example.proto",
  ],
  deps = [
    "@com_google_googleapis//google/api:client_proto",
  ]
)

# just the gapic-generator-ruby output
ruby_gapic_library(
  name = "example_gapic_library",
  srcs = ["example_src",],
  yml_file_labels = ["//:example.yml"]
)

# just the protoc ruby output
ruby_proto_library(
  name = "example_proto_library",
  deps = [":example_src"],
)

# just the grpc-ruby plugin output
ruby_grpc_library(
  name = "example_grpc_library",
  srcs = [":example_src"],
  deps = [":example_proto_library"]
)
