# Copyright 2021 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

"""
Defines the targets for the google-cloud-compute (regapic) library to be built
with gapic-generator-ruby cloud flavor
"""
load("@gapic_generator_ruby//rules_ruby_gapic:ruby_gapic.bzl", 
  "ruby_cloud_gapic_library",
  "ruby_proto_library")

load("@gapic_generator_ruby//rules_ruby_gapic:ruby_gapic_pkg.bzl", 
  "ruby_gapic_assembly_pkg")

load("@rules_gapic//:gapic.bzl", "proto_library_with_info")

# Remove this section when the monolith rule deps are
# out of googleapis.
proto_library_with_info(
    name = "compute_proto_with_info",
    deps = [
        "@com_google_googleapis_discovery//google/cloud/compute/v1:compute_proto",
        "@com_google_googleapis//google/cloud:common_resources_proto",
    ],
)
##
# completed google-cloud-compute library combined from
# * protoc ruby output
# * gapic-generator-ruby cloud flavor output
#
ruby_gapic_assembly_pkg(
  name = "google-cloud-compute-v1-ruby",
  deps = [
    ":compute_ruby_gapic",
    ":compute_ruby_proto",
  ],
)

##
# just the gapic-generator-ruby cloud flavor output
#
ruby_cloud_gapic_library(
  name = "compute_ruby_gapic",
  srcs = [":compute_proto_with_info"],
  extra_protoc_parameters = [
    "ruby-cloud-api-id=compute.googleapis.com",
    "ruby-cloud-api-shortname=compute",
    "ruby-cloud-gem-name=google-cloud-compute-v1",
    "ruby-cloud-generate-metadata=false",
    "ruby-cloud-generate-transports=rest",
    "ruby-cloud-env-prefix=COMPUTE",
    "ruby-cloud-extra-dependencies=gapic-common=>= 0.5.1|< 2.a",
    "ruby-cloud-product-url=https://cloud.google.com/compute/",
    "ruby-cloud-wrapper-gem-override=",
  ],
  ruby_cloud_description = "google-cloud-compute-v1 is the official client library for the Google Cloud Compute V1 API. This library is considered to be in alpha. This means it is still a work-in-progress and under active development. Any release is subject to backwards-incompatible changes at any time.",
  ruby_cloud_title = "Google Cloud Compute V1 (ALPHA)",
)

##
# just the protoc ruby output
#
ruby_proto_library(
  name = "compute_ruby_proto",
  deps = ["@com_google_googleapis_discovery//google/cloud/compute/v1:compute_proto"],
)
