load("@gapic_generator_ruby//rules_ruby_gapic:ruby_gapic.bzl", "ruby_gapic_cloud_library", "ruby_proto_library", "ruby_grpc_library")
load("@gapic_generator_ruby//rules_ruby_gapic:ruby_gapic_pkg.bzl", "ruby_gapic_assembly_pkg")

# protoc ruby output
ruby_proto_library(
  name = "language_ruby_proto",
  deps = ["@com_google_googleapis//google/cloud/language/v1:language_proto"],
)

# grpc-ruby plugin output
ruby_grpc_library(
    name = "language_ruby_grpc",
    srcs = ["@com_google_googleapis//google/cloud/language/v1:language_proto"],
    deps = [":language_ruby_proto"],
)

#gapic-generator-ruby output
ruby_gapic_cloud_library(
  name = "language_ruby_gapic",
  srcs = ["@com_google_googleapis//google/cloud/language/v1:language_proto_with_info"],
  ruby_cloud_params = {
    ":gem.:name": "google-cloud-language-v1",
    ":gem.:title": "Natural Language V1",
    ":gem.:description": "Provides natural language understanding technologies\\, such as sentiment analysis\\, entity recognition\\, entity sentiment analysis\\, and other text annotations.",
    ":gem.:env_prefix": "LANGUAGE",
    ":gem.:product_documentation_url": "https://cloud.google.com/natural-language",
    ":gem.:api_id": "language.googleapis.com",
    ":gem.:api_shortname": "language",
  },
  grpc_service_configs = [":language_grpc_service_config.json"]
)

# completed client library
ruby_gapic_assembly_pkg(
  name = "google-cloud-language-v1-ruby",
  deps = [
    ":language_ruby_gapic",
    ":language_ruby_grpc",
    ":language_ruby_proto",
  ],
)
