# Copyright 2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

"""
Defines the targets for the google cloud language library to be built
with gapic-generator-ruby cloud flavor
"""
load("@gapic_generator_ruby//rules_ruby_gapic:ruby_gapic.bzl", 
  "ruby_gapic_library",
  "ruby_proto_library",
  "ruby_grpc_library")

load("@gapic_generator_ruby//rules_ruby_gapic:ruby_gapic_pkg.bzl", 
  "ruby_gapic_assembly_pkg")

##
# completed example client library combined from
# * protoc ruby output
# * grpc-ruby protoc plugin output
# * gapic-generator-ruby vanilla flavor output
#
ruby_gapic_assembly_pkg(
  name = "example_ruby_library",
  deps = [
    ":example_ruby_gapic",
    ":example_ruby_proto",
    ":example_ruby_grpc",
  ],
)

##
# the proto files wrapped with dependencies
#
proto_library(
  name = "example_proto",
  srcs = ["example.proto"],
  deps = ["@com_google_googleapis//google/api:client_proto"]
)

##
# just the gapic-generator-ruby vanilla flavor output
#
ruby_gapic_library(
  name = "example_ruby_gapic",
  srcs = [":example_proto",],
  yml_configs = ["//gapic-generator:example.yml"]
)

##
# just the protoc ruby output
#
ruby_proto_library(
  name = "example_ruby_proto",
  deps = [":example_proto"],
)

##
# just the grpc-ruby plugin output
#
ruby_grpc_library(
  name = "example_ruby_grpc",
  srcs = [":example_proto"],
  deps = [":example_ruby_proto"]
)
