load("@gapic_generator_ruby//rules_ruby_gapic:ruby_gapic.bzl", "ruby_gapic_library", "ruby_proto_library", "ruby_grpc_library")
load("@gapic_generator_ruby//rules_ruby_gapic:ruby_gapic_pkg.bzl", "ruby_gapic_assembly_pkg")

# completed client library
ruby_gapic_assembly_pkg(
  name = "example_ruby_pkg",
  deps = [
    ":example_ruby_gapic",
    ":example_ruby_proto",
    ":example_ruby_grpc",
  ],
)

# the proto file wrapper
proto_library(
  name = "example_proto",
  srcs = ["example.proto"],
  deps = ["@com_google_googleapis//google/api:client_proto"]
)

# just the gapic-generator-ruby output
ruby_gapic_library(
  name = "example_ruby_gapic",
  srcs = [":example_proto",],
  yml_file_labels = ["//gapic-generator:example.yml"]
)

# just the protoc ruby output
ruby_proto_library(
  name = "example_ruby_proto",
  deps = [":example_proto"],
)

# just the grpc-ruby plugin output
ruby_grpc_library(
  name = "example_ruby_grpc",
  srcs = [":example_proto"],
  deps = [":example_ruby_proto"]
)
